# xtasks

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  build.rs
.cargo/: config.toml
.github/: CODE-OF-CONDUCT.md  CODEOWNERS  SECURITY.md
.github/workflows/: audit.yml  check.yml  document.yml  lint.yml  release.yml  test.yml
examples/: example.rs  example_bloat.rs  example_ci.rs  example_coverage.rs  example_docs.rs  example_powerset.rs
src/: lib.rs  loggers.rs  macros.rs  main.rs  ops.rs  tasks.rs
src/tasks/: bloat.rs  ci.rs  coverage.rs  docs.rs  powerset.rs
tests/: test_bloat.rs  test_ci.rs  test_coverage.rs  test_docs.rs  test_loggers.rs  test_main.rs  test_ops.rs  test_powerset.rs  test_tasks.rs
