[package]
authors = ["The xtasks contributors"]
build = "build.rs"
categories = [
    "command-line-interface",
    "command-line-utilities",
    "compilers",
    "config",
    "development-tools"
]
description = """
Essential tools and tasks for Rust projects using the xtask pattern, simplifying
common build and development workflows.
"""
documentation = "https://docs.rs/xtasks"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://xtasks.pro"
keywords = ["xtasks"]
license = "MIT OR Apache-2.0"
name = "xtasks"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/xtasks"
rust-version = "1.71.1"
version = "0.0.1"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

# [[bench]]
# name = "bench"
# harness = false
# path = "benches/bench.rs"

[lib]
crate-type = ["lib"]
name = "xtasks"
path = "src/lib.rs"

[features]
cli = []
default = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.8", optional = false }
derive_builder = "^0.12.0"
dialoguer = "0.11.0"
dtt = "0.0.4"
duct = "0.13.6"
fs_extra = "1.3.0"
glob = "0.3.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
vrd = "0.0.4"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"
tempfile = "3.8.1"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false