[package]
authors = ["The xtasks contributors"]
build = "build.rs"
categories = [
    "command-line-interface",
    "command-line-utilities",
    "compilers",
    "config",
    "development-tools"
]
description = """
Essential tools and tasks for Rust projects using the xtask pattern, simplifying
common build and development workflows.
"""
documentation = "https://docs.rs/xtasks"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://xtasks.pro"
keywords = ["xtasks"]
license = "MIT OR Apache-2.0"
name = "xtasks"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/xtasks"
rust-version = "1.71.1"
version = "0.0.2"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

# [[bench]]
# name = "bench"
# harness = false
# path = "benches/bench.rs"

[lib]
crate-type = ["lib"]
name = "xtasks"
path = "src/lib.rs"

[[bin]]
name = "xtasks"
path = "src/main.rs" 

[features]
cli = []
default = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.17", optional = false }
derive_builder = "^0.12.0"
dialoguer = "0.11.0"
dtt = "0.0.5"
duct = "0.13.7"
fs_extra = "1.3.0"
glob = "0.3.1"
rlg = "0.0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
vrd = "0.0.5"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"
tempfile = "3.9.0"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false